--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "readyplot"
 version = "1.2.3"
-description = "Class-based plotter"
+description = "Publication-ready data visualization"
 readme = "README.md"
 dependencies = [
       "matplotlib",
