Trimmed extra files

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 /readyplot/DATA.xlsx
 /readyplot/TEST_PLOTTER.ipynb
 /.idea/workspace.xml
+/.idea/misc.xml
+/.idea/inspectionProfiles/profiles_settings.xml
+/.idea/inspectionProfiles/Project_Default.xml
+/.idea/readyplot.iml
+/.idea/vcs.xml
